Corrected wrapping for long card values

--- a/frontend/css/app/controls.css
+++ b/frontend/css/app/controls.css
@@ -56,4 +56,6 @@ div.card-text {
     position: relative;
     text-align: center;
     top: 15px;
+
+    word-wrap: break-word;
 }
